// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-tree-item renders with checkbox 1`] = `
<modus-wc-tree-item checkbox="" label="Test Item" value="test">
  <!---->
  <li aria-selected="false" class="modus-wc-tree-item modus-wc-tree-item-xs" role="treeitem" tabindex="0">
    <div class="modus-wc-tree-content">
      <modus-wc-button aria-label="Expand" customclass="modus-wc-tree-toggle-btn" disabled="" shape="circle" size="xs" variant="borderless">
        <modus-wc-icon customclass="modus-wc-tree-toggle-icon  modus-wc-tree-toggle-button-hidden" name="chevron_right" size="xs"></modus-wc-icon>
      </modus-wc-button>
      <modus-wc-checkbox aria-label="select item" size="sm"></modus-wc-checkbox>
      <div class="modus-wc-tree-item-labels">
        <div class="modus-wc-tree-item-label">
          Test Item
        </div>
      </div>
      <div class="modus-wc-tree-item-actions">
        <modus-wc-tree-actions size="xs"></modus-wc-tree-actions>
      </div>
    </div>
  </li>
</modus-wc-tree-item>
`;

exports[`modus-wc-tree-item renders with default props 1`] = `
<modus-wc-tree-item label="Test Item" value="test">
  <!---->
  <li aria-selected="false" class="modus-wc-tree-item modus-wc-tree-item-xs" role="treeitem" tabindex="0">
    <div class="modus-wc-tree-content">
      <modus-wc-button aria-label="Expand" customclass="modus-wc-tree-toggle-btn" disabled="" shape="circle" size="xs" variant="borderless">
        <modus-wc-icon customclass="modus-wc-tree-toggle-icon  modus-wc-tree-toggle-button-hidden" name="chevron_right" size="xs"></modus-wc-icon>
      </modus-wc-button>
      <div class="modus-wc-tree-item-labels">
        <div class="modus-wc-tree-item-label">
          Test Item
        </div>
      </div>
      <div class="modus-wc-tree-item-actions">
        <modus-wc-tree-actions size="xs"></modus-wc-tree-actions>
      </div>
    </div>
  </li>
</modus-wc-tree-item>
`;
